# robotics_1_smart_factory

./: CMakeLists.txt  README.md  index.dox  package.xml
config/: actuator_controller.yaml  locations.yaml
launch/: amazon_robot_empty_world_launch.py  amazon_robot_warehouse.launch.py  empty_world_launch.py  robot_amazon_description.launch.py  spawn_amazon_model.launch.py  warehouse_world.launch.py
map/: warehouse_map.bt  warehouse_map.pcd  warehouse_map.yaml
map/nav2/: my_map.pgm  my_map.yaml
map/old_map/: old_warehouse_map.bt  old_warehouse_map.yaml
map/rtbmap/: rtab_warehouse_map.pgm  rtab_warehouse_map.yaml  rtab_warehouse_map_old.pgm  rtab_warehouse_map_old.yaml  warehouse_map_new.pgm  warehouse_map_new.yaml
models/aws_robomaker_warehouse_DeskC_01/: model.sdf
models/bookshelf/: model.config
models/conveyor_sub/: model.config  model.sdf
models/cylinder_30_cm/: model.config  model.sdf
models/simple_shelf/: model.config  model.sdf
models/unit_cylinder/: model.sdf
models/warehouse_building/: model.config  model.sdf
models/warehouse_ground/: model.config  model.sdf
param/: waffle_pi.yaml
src/: alley.cpp  alley.h  location_manager.cpp  location_manager.h  map_overlay.cpp  object_detection.cpp  object_detection.h  robot_controller.cpp  robot_controller.h  robot_controller_test.cpp  test.cpp  warehouse_manager.cpp  warehouse_manager.h
src/sprint/: compare_maps.cpp  map_overlay.cpp  nope.cpp  object_detection.cpp
test/: test_location_manager.cpp
worlds/: warehouse_world.world  warehouse_world_compact.world  warehouse_world_groundless.world
